dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationServiceComponentRelation__c.object
<CustomObject>
    <description>Queue for Service Component Relation Integration</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForeignReference__c</fullName>
        <label>Foreign Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalRecordId__c</fullName>
        <label>Local Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResult__c</fullName>
        <label>Message Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationId__c</fullName>
        <label>Relation Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationNumber__c</fullName>
        <label>Relation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Component_Relation__c</fullName>
        <label>Service Component Relation</label>
        <referenceTo>ServiceComponentRelation__c</referenceTo>
        <relationshipLabel>Service Component Relation Integration</relationshipLabel>
        <relationshipName>Service_Component_Relation_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Component Relation Integration</label>
    <nameField>
        <displayFormat>CR{0000000000}</displayFormat>
        <label>MessageID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Component Relation Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>